@@ -1,3 +1,13 @@
+*** 20010726_2 by leeh
+- added #define HIDE_ERROR_MESSAGES, as when we receive an error from a 
+  server, theyll sometimes send their IP along with it..
+
+
+*** 20010726_1 by leeh
+- backport from -7
+  if someone squits *us*, use cptr->name, not cptr->host
+
+
 *** 20010722_2 by db
 - Don't show ip's on auto conns
 
